@@ -1,3 +1,9 @@
+2008-02-05	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* posix/Makefile.am: Remove these. They were proposed but never
+	standardized.
+	* posix/src/pthreadgetcputime.c, posix/src/pthreadsetcputime.c: Removed.
+
 2007-12-23	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* libcsupport/src/sync.c: Make sync() POSIX-compliant.
